--- a/style.css
+++ b/style.css
@@ -388,6 +388,7 @@ main section.active {
   justify-content: space-between;
   align-items: center;
   overflow-x: scroll;
+  scrollbar-width: none;
   border: 1px solid grey;
   border-radius: 5px;
   padding: 1px 0px;
