--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@
 }
 :root {
   --blur: rgb(160, 160, 160);
-  --one : #080202;
-  --two: #73BBC9;
-  --three: #F1D4E5;
-  --four: #FCE9F1
+  --one: #080202;
+  --two: #73bbc9;
+  --three: #f1d4e5;
+  --four: #fce9f1;
 }
-.app{
+.app {
   position: relative;
   height: 100vh;
   width: 100vw;
@@ -21,7 +21,7 @@
 
   scrollbar-width: none;
 }
-.app.dark{
+.app.dark {
   background-color: #0d1516;
   color: #ffffff;
 }
@@ -43,7 +43,6 @@ header.main {
   padding: 5px 10px;
   align-items: center;
   width: 100vw;
-  
 }
 header .left {
   display: flex;
@@ -57,7 +56,7 @@ footer {
   position: fixed;
   bottom: 0;
   left: 0;
-  
+ background-color: #ffffff;
   width: 100%;
   border-top: 1px solid gray;
 }
@@ -99,7 +98,8 @@ main section.account {
   scrollbar-width: none;
   flex-direction: column;
 }
-main section.account.blurbg,main section.account.blur {
+main section.account.blurbg,
+main section.account.blur {
   background-color: var(--blur);
   transition: background-color 1s ease;
   -webkit-transition: background-color 1s ease;
@@ -137,7 +137,6 @@ main section.active {
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
-  background:linear-gradient(to bottom left,rgba(35, 224, 183, 0.534),rgba(157, 0, 255, 0.315)) ;
 }
 .penny-info .top {
   width: 100%;
@@ -310,7 +309,8 @@ main section.active {
   background-color: rgb(225, 225, 225);
 }
 /* accoutn add style */
-.box-body ,.edit-box-body{
+.box-body,
+.edit-box-body {
   border-radius: 5px;
   width: 350px;
   position: absolute;
@@ -334,7 +334,8 @@ main section.active {
   transform-style: preserve-3d;
 }
 
-.box-body.active,.edit-box-body.active {
+.box-body.active,
+.edit-box-body.active {
   display: flex;
 }
 @keyframes open {
@@ -455,12 +456,12 @@ main section.active {
 .account-btns button:focus {
   outline: none;
 }
-.operations{
+.operations {
   position: relative;
 }
-.operations .options{
+.operations .options {
   position: absolute;
-  animation: down .3s ease;
+  animation: down 0.3s ease;
   right: 30px;
   top: 10px;
   display: flex;
@@ -473,27 +474,27 @@ main section.active {
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
-  -webkit-animation: down .3s ease;
+  -webkit-animation: down 0.3s ease;
   display: none;
 }
-.operations .options.active{
+.operations .options.active {
   display: flex;
 }
 
 @keyframes down {
-  from{
+  from {
     transform: translateY(-20px) scale(0);
     -webkit-transform: translateY(-20px) scale(0);
     -moz-transform: translateY(-20px) scale(0);
     -ms-transform: translateY(-20px) scale(0);
     -o-transform: translateY(-20px) scale(0);
+  }
 }
-}
-.options p{
+.options p {
   padding: 7px 15px;
   font-size: 17px;
   font-weight: 500;
 }
-.options p:hover{
+.options p:hover {
   background-color: #c0c0c0;
 }
