--- a/style.css
+++ b/style.css
@@ -8,10 +8,12 @@
 }
 :root {
   --blur: rgb(160, 160, 160);
-  --one: #080202;
+  --darkblur: rgb(66, 66, 66);
+  --dark: #080202;
   --two: #73bbc9;
   --three: #f1d4e5;
   --four: #fce9f1;
+  --lightDark:rgb(53, 53, 53);
 }
 .app {
   position: relative;
@@ -21,9 +23,50 @@
 
   scrollbar-width: none;
 }
-.app.dark {
-  background-color: #0d1516;
+.app.dark,.app.dark .sidebar{
+  background-color:var(--dark);
   color: #ffffff;
+}
+.app.dark img.svg{
+  filter: invert(1);
+  -webkit-filter: invert(1);
+}
+.app.dark main section.account .box-body,
+.app.dark main section.account .edit-box-body
+
+{
+  background-color:var(--dark);
+  color: #ffffff;
+}
+.app.dark main section.account .box-body .input-container .input-body input,
+.app.dark main section.account .edit-box-body .input-container .input-body input{
+  background-color:var(--dark);
+  color: #ffffff;
+}
+.app.dark main section.account .account-container ul li .operations .options{
+  background-color: var(--lightDark);
+  color: #ffffff;
+}
+.app.dark main section.account .account-container ul li .operations .options p:hover{
+  background-color: rgb(80, 80, 80)!important;
+
+}
+
+.app.dark .sidebar .settings ul li:hover {
+  background-color: rgb(53, 53, 53);
+}
+.app.dark main section.account.blurbg,
+.app.dark main section.account.blur {
+  background-color: var(--darkblur);
+  color: #050505;
+  transition: background-color color 1s ease;
+  -webkit-transition: background-color color 1s ease;
+  -moz-transition: background-color color 1s ease;
+  -ms-transition: background-color color 1s ease;
+  -o-transition: background-color color 1s ease;
+}
+.app.dark footer{
+  background-color: var(--dark);
 }
 
 ul {
@@ -195,6 +238,8 @@ main section.active {
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
+
+
 .accounts .card .card-body {
   display: flex;
   gap: 20px;
