--- a/category.css
+++ b/category.css
@@ -51,14 +51,14 @@ main section.categories .category-container {
 }
 .category-container .income-category ul li .left-portion img,
 .category-container .expense-category ul li .left-portion img {
-  border-radius: 50px;
+  border-radius: 10px;
   width: 40px;
   padding: 3px;
   height: 40px;
-  -webkit-border-radius: 50px;
-  -moz-border-radius: 50px;
-  -ms-border-radius: 50px;
-  -o-border-radius: 50px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 .food {
   background-color: rgb(255, 4, 105);
@@ -75,7 +75,7 @@ main section.categories .category-container {
 .education {
   background-color: rgb(138, 37, 172);
 }
-.car{
+.car {
   background-color: rgb(255, 0, 0);
 }
 .insurance {
@@ -84,7 +84,7 @@ main section.categories .category-container {
 .entertain {
   background-color: rgb(3, 17, 209);
 }
-.shopping{
+.shopping {
   background-color: rgb(0, 145, 255);
 }
 .cloth {
@@ -93,32 +93,32 @@ main section.categories .category-container {
 .change-font-style {
   font-size: 16px;
 }
-.computer{
-    background-color: rgb(65, 113, 97);
+.computer {
+  background-color: rgb(65, 113, 97);
 }
-.cupon{
-  background-color: #FF4E88;
+.cupon {
+  background-color: #ff4e88;
 }
-.grant{
-  background-color: #914F1E;
+.grant {
+  background-color: #914f1e;
 }
-.awards{
-  background-color: #009FBD;
+.awards {
+  background-color: #009fbd;
 }
-.refund{
-  background-color: #667BC6;
+.refund {
+  background-color: #667bc6;
 }
-.salary{
-  background-color: #850F8D;
+.salary {
+  background-color: #850f8d;
 }
-.sale{
+.sale {
   background-color: #f86e6e;
 }
-.rent{
+.rent {
   background-color: #0004ff;
 }
-.lottery{
-  background-color: #41B06E;
+.lottery {
+  background-color: #41b06e;
 }
 .category-container .income-category ul li .right-portion,
 .category-container .expense-category ul li .right-portion {
