--- a/category.css
+++ b/category.css
@@ -71,7 +71,7 @@ main section.categories .category-container {
   color: black;
   animation: none;
   -webkit-animation: none;
-  background-color: rgb(104, 104, 104);
+
 }
 
 .category-box-body .input-container .category{
@@ -84,7 +84,7 @@ main section.categories .category-container {
 .category-box-body .input-container .category .switch{
   width: 80px;
   height: 40px;
-  background-color: rgb(12, 17, 105);
+  background:linear-gradient(to left,rgb(153, 0, 255),rgb(255, 204, 0));
   border-radius: 50px;
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
