--- a/style.css
+++ b/style.css
@@ -407,13 +407,13 @@ main section.active {
   top: -27px;
   left: 0px;
 }
-.account-icons-parent {
+.account-icons-parent,.category-icons-parent{
   width: 100%;
 }
-.account-icons-parent p {
+.account-icons-parent p,.category-icons-parent p {
   text-align: left;
 }
-.account-icons-parent ul {
+.account-icons-parent ul,.category-icons-parent ul  {
   display: flex;
   gap: 10px;
   justify-content: space-between;
@@ -428,12 +428,12 @@ main section.active {
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
 }
-.account-icons-parent ul li img {
+.account-icons-parent ul li img ,.category-icons-parent ul li img{
   width: 50px;
   height: 50px;
   padding: 5px;
 }
-.account-icons-parent ul li {
+.account-icons-parent ul li,.category-icons-parent ul li {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -454,20 +454,20 @@ main section.active {
   position: relative;
 }
 
-.account-btns {
+.account-btns,.category-btns {
   width: 100%;
   display: flex;
   margin-top: 10px;
   height: 50px;
   gap: 15px;
 }
-.account-btns button {
+.account-btns button,.category-btns button{
   flex-grow: 1;
   font-family: inherit;
   font-weight: 600;
   font-size: inherit;
 }
-.account-btns button:focus {
+.account-btns button:focus,.category-btns button:focus {
   outline: none;
 }
 .operations,
