--- a/style.css
+++ b/style.css
@@ -413,7 +413,7 @@ main section.active {
 .account-icons-parent p,.category-icons-parent p {
   text-align: left;
 }
-.account-icons-parent ul,.category-icons-parent ul  {
+.account-icons-parent ul{
   display: flex;
   gap: 10px;
   justify-content: space-between;
@@ -428,17 +428,17 @@ main section.active {
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
 }
-.account-icons-parent ul li img ,.category-icons-parent ul li img{
+.account-icons-parent ul li img{
   width: 50px;
   height: 50px;
   padding: 5px;
 }
-.account-icons-parent ul li,.category-icons-parent ul li {
+.account-icons-parent ul li {
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
-.account-icons-parent ul li.active {
+.account-icons-parent ul li.active,.category-icons-parent .category-container ul li.active {
   border: 1px solid #050505;
   background-color: #fef4f4;
   border-radius: 5px;
@@ -514,4 +514,40 @@ main section.active {
 }
 .options p:hover {
   background-color: #c0c0c0;
+}
+.category-icons-parent .category-container{
+  display: flex;
+  flex-direction: column;
+  width: 100% !important;
+overflow: scroll;
+border: 1px solid;
+
+
+  
+}
+.category-icons-parent .category-container ul{
+  display: flex;
+width: fit-content;
+  gap: 10px;
+
+  justify-content: space-between;
+  align-items: center;
+ overflow-x: scroll;
+  scrollbar-width: none;
+  border-radius: 5px;
+
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+.category-icons-parent .category-container ul li img{
+  width: 50px;
+  height: 50px;
+  padding: 5px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
