--- a/style.css
+++ b/style.css
@@ -436,7 +436,7 @@ main section.active {
   justify-content: flex-start;
   align-items: center;
 }
-.account-icons-parent ul li.active,.category-icons-parent .category-container ul li.active {
+.account-icons-parent ul li.active{
   border: 1px solid #050505;
   background-color: #fef4f4;
   border-radius: 5px;
@@ -517,18 +517,23 @@ main section.active {
   display: flex;
   flex-direction: column;
   width: 100% !important;
+ height: 123px;
   overflow: scroll;
   border: 1px solid;
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  position: relative;
 }
 .category-icons-parent .category-container ul{
   display: flex;
 width: fit-content;
   gap: 10px;
+  position: absolute;
+  top: 5px;
+  left: 10px;
 
   justify-content: space-between;
   align-items: center;
@@ -541,6 +546,14 @@ width: fit-content;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
 }
+.category-icons-parent .category-container ul.bottom{
+
+  position: absolute;
+  top: 65px;
+  left: 10px;
+
+}
+
 .category-icons-parent .category-container ul li img{
   width: 50px;
   height: 50px;
@@ -550,4 +563,22 @@ width: fit-content;
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
+}
+.category-icons-parent .category-container ul li.active {
+  border: 1px solid #050505;
+  background-color: #fef4f4;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  position: relative;
+}
+.category-icons-parent .category-container ul {
+background-color: ;
 }
