--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ main section.account {
   flex-direction: column;
 }
 main section.account.blurbg,
-main section.categories.blurbg,
+main section.categories.blurbg,main section.categories.blur,
 main section.account.blur {
   background-color: var(--blur);
   transition: background-color 1s ease;
