--- a/category.css
+++ b/category.css
@@ -2,7 +2,8 @@ main section.categories {
   height: 100%;
 }
 
-main section.categories .category-container {
+main section.categories .category-container,
+.category-budgets {
   display: flex;
   gap: 15px;
   flex-direction: column;
@@ -22,6 +23,7 @@ main section.categories .category-container {
   margin-top: 10px;
 }
 .category-container .income-category ul,
+.category-budgets .budget-list,
 .category-container .expense-category ul {
   display: flex;
   width: 100%;
@@ -31,11 +33,13 @@ main section.categories .category-container {
   gap: 15px;
 }
 .category-container .income-category ul li,
+.category-budgets .budget-list li,
 .category-container .expense-category ul li {
   display: flex;
   width: 100%;
 }
 .category-container .income-category ul li,
+.category-budgets .budget-list li,
 .category-container .expense-category ul li {
   display: flex;
   justify-content: space-between;
@@ -43,6 +47,7 @@ main section.categories .category-container {
   width: 100%;
 }
 .category-container .income-category ul li .left-portion,
+.category-budgets .budget-list li .left-portion,
 .category-container .expense-category ul li .left-portion {
   display: flex;
   justify-content: center;
@@ -50,6 +55,7 @@ main section.categories .category-container {
   gap: 15px;
 }
 .category-container .income-category ul li .left-portion img,
+.category-budgets .budget-list li .left-portion img,
 .category-container .expense-category ul li .left-portion img {
   border-radius: 10px;
   width: 40px;
@@ -61,18 +67,19 @@ main section.categories .category-container {
 }
 
 .category-container .income-category ul li .right-portion,
+.category-budgets .budget-list li .right-portion,
 .category-container .expense-category ul li .right-portion {
   padding-right: 10px;
 }
 
-.category-box-body .input-container .category, 
+.category-box-body .input-container .category,
 .edit-category-box-body .input-container .category {
   width: 100%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
-.category-box-body .input-container .category .switch ,
+.category-box-body .input-container .category .switch,
 .edit-category-box-body .input-container .category .switch {
   width: 70px;
   height: 35px;
