--- a/budget.css
+++ b/budget.css
@@ -1,12 +1,10 @@
 main section.budgets {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  width: 100%;
-  height: 100vh;
+  height: 100%;
+ 
 }
 .budget-container {
   height: 100%;
+  width: 100%;
   overflow: hidden;
   overflow-y: scroll;
   scrollbar-width: none;
